--- a/package.json
+++ b/package.json
@@ -1,23 +1,49 @@
 {
-  "name": "com.jh.react-table",
-  "version": "1.0.0",
+  "name": "react-simpliest-table",
+  "version": "1.0.3",
+  "private": false,
   "description": "Custom table for ReactJS",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "files": [
+    "css",
+    "es",
+    "lib",
+    "umd"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nwb build-react-component",
+    "clean": "nwb clean-module && nwb clean-demo",
+    "prepublishOnly": "npm run build -- --copy-files",
+    "start": "nwb serve-react-demo",
+    "test": "nwb test-react",
+    "test:coverage": "nwb test-react --coverage",
+    "test:watch": "nwb test-react --server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/st4nn/react-table.git"
+  "peerDependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "nwb": "0.24.x",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "keywords": [
-    "REACTJS",
-    "TABLE"
+    "react",
+    "react-component",
+    "table",
+    "react-table",
+    "datatable"
   ],
-  "author": "Jhonathan Espinosa",
+  "author": "Jhonathan Espinosa <jhonathan2@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/st4nn/react-table/issues"
+    "url": "https://github.com/st4nn/react-simpliest-table/issues"
   },
-  "homepage": "https://github.com/st4nn/react-table#readme"
+  "homepage": "https://github.com/st4nn/react-simpliest-table#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/st4nn/react-simpliest-table.git"
+  }
 }
